@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2017 The Semux Developers
+ * Copyright (c) 2017-2018 The Semux Developers
  *
  * Distributed under the MIT software license, see the accompanying file
  * LICENSE or https://opensource.org/licenses/mit-license.php
@@ -8,46 +8,44 @@ package org.semux.wrapper;
 
 import static java.util.Arrays.asList;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.function.Supplier;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 import org.apache.commons.cli.ParseException;
 import org.apache.commons.lang3.ArrayUtils;
-import org.semux.cli.SemuxCLI;
-import org.semux.config.Constants;
-import org.semux.gui.SemuxGUI;
-import org.semux.log.LoggerConfigurator;
+import org.apache.commons.lang3.tuple.ImmutablePair;
+import org.semux.cli.SemuxCli;
+import org.semux.gui.SemuxGui;
 import org.semux.util.SystemUtil;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /**
  * This is a process wrapper mainly created for dynamic allocation of the
- * maximum heap size of Semux JVM. The wrapper dynamically allocates 80% of
- * available physical memory to Semux JVM if -Xmx option is not specified.
+ * maximum heap size of JVM. The wrapper sets the -Xmx to 80% of available
+ * physical memory if the -Xmx option is not specified.
  */
 public class Wrapper {
 
-    final static Logger logger = LoggerFactory.getLogger(Wrapper.class);
-
-    public static final long MINIMUM_HEAP_SIZE_MB = 1024L;
+    public static final long MINIMUM_HEAP_SIZE_MB = 512L;
 
     enum Mode {
         GUI, CLI
     }
 
-    private static Class<?> getModeClass(Mode mode) {
+    protected static Class<?> getModeClass(Mode mode) {
         switch (mode) {
         case CLI:
-            return SemuxCLI.class;
+            return SemuxCli.class;
 
         case GUI:
-            return SemuxGUI.class;
+            return SemuxGui.class;
 
         default:
             throw new WrapperException("Selected mode is not supported");
@@ -55,49 +53,89 @@ public class Wrapper {
     }
 
     public static void main(String[] args) throws IOException, InterruptedException, ParseException {
-        // TODO: use specified data directory
-        LoggerConfigurator.configure(new File(Constants.DEFAULT_DATA_DIR));
         WrapperCLIParser wrapperCLIParser = new WrapperCLIParser(args);
         Wrapper wrapper = new Wrapper();
-        String[] jvmOptions = wrapper.allocateHeapSize(wrapperCLIParser.jvmOptions);
+        String[] jvmOptions = wrapper.addDefaultJvmOptions(wrapperCLIParser.mode, wrapperCLIParser.jvmOptions);
         int exitValue = wrapper.exec(wrapperCLIParser.mode, jvmOptions, wrapperCLIParser.remainingArgs);
         SystemUtil.exit(exitValue);
     }
 
-    protected String[] allocateHeapSize(String[] jvmOptions) {
+    protected String[] addDefaultJvmOptions(Mode mode, final String[] jvmOptions) {
         ArrayList<String> allocatedJvmOptions = new ArrayList<>(asList(jvmOptions));
 
-        // dynamically specify maximum heap size according to available physical memory
-        // if Xmx is not specified in jvmoptions
-        final Pattern xmxPattern = Pattern.compile("^-Xmx");
-        if (Stream.of(jvmOptions).noneMatch(s -> xmxPattern.matcher(s).find())) {
-            long toAllocateMB = (long) ((double) SystemUtil.getAvailableMemorySize() / 1024 / 1024 * 0.8);
-            if (toAllocateMB < MINIMUM_HEAP_SIZE_MB) {
-                toAllocateMB = MINIMUM_HEAP_SIZE_MB;
-                logger.warn(
-                        "The available memory space on your system is less than the minimum requirement of {}M. This may result in low performance or a crash of semux wallet.",
-                        MINIMUM_HEAP_SIZE_MB);
-            }
-            allocatedJvmOptions.add(String.format("-Xmx%dM", toAllocateMB));
-            logger.debug("Allocating {} MB of memory as maximum heap size", toAllocateMB);
-        }
+        // add non-existing options
+        getDefaultJvmOptionSuppliers(mode)
+                .stream()
+                .sequential()
+                .filter(e -> Stream.of(jvmOptions).noneMatch(s -> e.getKey().matcher(s).find()))
+                .forEachOrdered(e -> allocatedJvmOptions.add(e.getValue().get()));
 
         return allocatedJvmOptions.toArray(new String[allocatedJvmOptions.size()]);
+    }
+
+    private static List<ImmutablePair<Pattern, Supplier<String>>> getDefaultJvmOptionSuppliers(Mode mode) {
+        List<ImmutablePair<Pattern, Supplier<String>>> defaults = new ArrayList<>(Arrays.asList(
+                // dynamically specify maximum heap size according to available physical memory
+                // if Xmx is not specified in jvmoptions
+                ImmutablePair.of(
+                        Pattern.compile("^-Xmx"),
+                        () -> String.format("-Xmx%dM",
+                                Math.max(SystemUtil.getAvailableMemorySize() / 1024 / 1024 * 8 / 10,
+                                        MINIMUM_HEAP_SIZE_MB))),
+
+                // Log4j2 default options
+                ImmutablePair.of(
+                        Pattern.compile("^-Dlog4j2\\.garbagefreeThreadContextMap"),
+                        () -> "-Dlog4j2.garbagefreeThreadContextMap=true"),
+                ImmutablePair.of(
+                        Pattern.compile("^-Dlog4j2\\.shutdownHookEnabled"),
+                        () -> "-Dlog4j2.shutdownHookEnabled=false"),
+                ImmutablePair.of(
+                        Pattern.compile("^-Dlog4j2\\.disableJmx"),
+                        () -> "-Dlog4j2.disableJmx=true")));
+
+        // see: https://github.com/netty/netty/issues/6347
+        if (SystemUtil.isJavaPlatformModuleSystemAvailable()) {
+            Collections.addAll(defaults,
+                    ImmutablePair.of(
+                            Pattern.compile("^--add-opens=java\\.base/sun\\.net\\.dns="),
+                            () -> "--add-opens=java.base/sun.net.dns=ALL-UNNAMED"),
+                    ImmutablePair.of(
+                            Pattern.compile("^--add-opens=java\\.base/java\\.lang\\.reflect="),
+                            () -> "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"),
+                    ImmutablePair.of(
+                            Pattern.compile("^--add-opens=java\\.base/java\\.nio="),
+                            () -> "--add-opens=java.base/java.nio=ALL-UNNAMED"),
+                    ImmutablePair.of(
+                            Pattern.compile("^--add-opens=java\\.base/sun\\.nio\\.ch="),
+                            () -> "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"));
+        }
+
+        if (mode.equals(Mode.GUI)) {
+            // splash screen
+            Collections.addAll(defaults,
+                    ImmutablePair.of(
+                            Pattern.compile("^-splash"),
+                            () -> String.format("-splash:%s", Paths.get("resources", "splash.png").toAbsolutePath())));
+        }
+
+        return defaults;
     }
 
     protected int exec(Mode mode, String[] jvmOptions, String[] args) throws IOException, InterruptedException {
         String javaHome = System.getProperty("java.home");
         Path javaBin = Paths.get(javaHome, "bin", "java");
-        String[] args1 = ArrayUtils.addAll(
-                ArrayUtils.addAll(new String[] { javaBin.toAbsolutePath().toString() }, jvmOptions),
-                ArrayUtils.addAll(new String[] { "-cp", "semux.jar", getModeClass(mode).getCanonicalName() }, args));
 
-        return startProcess(args1);
+        String classpath = System.getProperty("java.class.path");
+
+        String[] newArgs = ArrayUtils.addAll(
+                ArrayUtils.addAll(new String[] { javaBin.toAbsolutePath().toString(), "-cp", classpath }, jvmOptions),
+                ArrayUtils.addAll(new String[] { getModeClass(mode).getCanonicalName() }, args));
+
+        return startProcess(newArgs);
     }
 
     protected int startProcess(String[] args) throws IOException, InterruptedException {
-        logger.debug(String.join(" ", args));
-
         ProcessBuilder processBuilder = new ProcessBuilder();
         processBuilder.command(args);
         processBuilder.inheritIO();
